@@ -148,3 +148,5 @@ function(f, x, right = FALSE, nomatch = NULL)
 identity <-
 function(x)
     x
+
+dontCheck <- identity
