@@ -18,8 +18,10 @@
 
 .noGenerics <- TRUE
 
-if (.Platform$OS.type == "windows")
-    utils::globalVariables(c("C_cairoProps", "C_makeQuartzDefault"), add = TRUE)
+if (.Platform$OS.type == "windows") {
+    utils::globalVariables(c("C_cairoProps", "C_makeQuartzDefault"))
+    utils::suppressForeignCheck(c("C_cairoProps", "C_makeQuartzDefault"))
+}
     
 .onLoad <- function(libname, pkgname)
 {
