@@ -14,26 +14,28 @@ export("?", .DollarNames, CRAN.packages, Rprof, Rprofmem, RShowDoc,
        close.socket, combn, compareVersion, contrib.url, count.fields,
        create.post, data, data.entry, dataentry, de, de.ncols,
        de.restore, de.setup, debugger, demo, download.file,
-       download.packages, dump.frames, edit, emacs, example, file_test,
-       file.edit, find, fix, fixInNamespace, findLineNum, flush.console,
-       formatOL, formatUL, getAnywhere, getCRANmirrors,
+       download.packages, dump.frames, edit, emacs, example,
+       file_test, file.edit, find, fix, fixInNamespace, findLineNum,
+       flush.console, formatOL, formatUL, getAnywhere, getCRANmirrors,
        getFromNamespace, getParseData, getParseText, getS3method,
        getSrcDirectory, getSrcFilename, getSrcLocation, getSrcref,
-       glob2rx, globalVariables, head, head.matrix, help, help.request,
-       help.search, help.start, history, install.packages,
-       installed.packages, is.relistable, limitedLabels, loadhistory,
-       localeToCharset, ls.str, lsf.str, maintainer, make.packages.html,
-       make.socket, memory.limit, memory.size, menu, methods,
-       mirror2html, modifyList, new.packages, news, object.size,
-       old.packages, package.skeleton, packageDescription, packageName,
+       glob2rx, globalVariables, head, head.matrix, help,
+       help.request, help.search, help.start, history,
+       install.packages, installed.packages, is.relistable,
+       limitedLabels, loadhistory, localeToCharset, ls.str, lsf.str,
+       maintainer, make.packages.html, make.socket, memory.limit,
+       memory.size, menu, methods, mirror2html, modifyList,
+       new.packages, news, object.size, old.packages,
+       package.skeleton, packageDescription, packageName,
        packageVersion, packageStatus, page, person, personList, pico,
-       process.events, prompt, promptData, promptPackage, rc.getOption,
-       rc.options, rc.settings, rc.status, readCitationFile, read.DIF,
-       read.csv, read.csv2, read.delim, read.delim2, read.fwf,
-       read.fortran, read.socket, read.table, recover, relist,
-       remove.packages, removeSource, rtags, savehistory, select.list,
-       sessionInfo, setBreakpoint, setRepositories, stack, str,
-       strOptions, summaryRprof, tail, tail.matrix, tar, timestamp,
+       process.events, prompt, promptData, promptPackage,
+       rc.getOption, rc.options, rc.settings, rc.status,
+       readCitationFile, read.DIF, read.csv, read.csv2, read.delim,
+       read.delim2, read.fwf, read.fortran, read.socket, read.table,
+       recover, relist, remove.packages, removeSource, rtags,
+       savehistory, select.list, sessionInfo, setBreakpoint,
+       setRepositories, stack, str, strOptions, summaryRprof,
+       suppressForeignCheck, tail, tail.matrix, tar, timestamp,
        toBibtex, toLatex, type.convert, unstack, untar, unzip,
        update.packageStatus, update.packages, upgrade, url.show, vi,
        vignette, write.csv, write.csv2, write.socket, write.table,
